fix: Summary - increase gap

--- a/packages/ui/src/components/summary/summary.module.css
+++ b/packages/ui/src/components/summary/summary.module.css
@@ -1,5 +1,5 @@
 .root {
-  --summary-gap: var(--space-xsmall);
+  --summary-gap: var(--space-small);
   width: 100%;
 }
 
